# dagviz

./: README.md  linux-git-log.txt  mypy.ini  pyproject.toml
.github/workflows/: build.yml  release.yml
dagviz/: __init__.py  abstract.html  abstract.py  colors.py  dagre.html  dagre.py  draw.py  draw_style.py  index.html  istyle.html  istyle.py  render.html  render.py
dagviz/style/: __init__.py  colors.html  colors.py  index.html  metro.html  metro.py
doc-template/: credits.mako  logo.mako
docs/: index.html
notebooks/: DAG examples.html  DAG examples.ipynb  Dagre examples.html  Dagre examples.ipynb  Metro examples.html  Metro examples.ipynb  Metro styling.html  Metro styling.ipynb  Unix lineage.html  Unix lineage.ipynb  index.html  issue-7.html  issue-7.ipynb
stubs/networkx/: __init__.pyi
stubs/networkx/algorithms/: dag.pyi
stubs/svgwrite/: __init__.pyi  container.pyi
tests/: dagviz_test.py
