[tool.poetry]
authors = ["Wim Yedema <wim.yedema@gmail.com>"]
classifiers = [
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Operating System :: OS Independent",
]
description = "Visualization for DAGs"
license = "Apache License 2.0"
name = "dagviz"
readme = "README.md"
repository = "https://github.com/WimYedema/dagviz.git"
version = "0.4.0"

[tool.poetry.dependencies]
importlib-metadata = {version = "^4.0", python = "<3.8"}
networkx = "^2.5.1"
python = "^3.7"
svgwrite = "^1.4.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1" 
click = "8.0.1" # fix bug in black
flake8 = "^3.8.4" 
flake8-comprehensions = "^3.2.3" 
flake8-eradicate = "^1.0.0" 
flake8-print = "^3.1.4" 
jupyter = "^1.0.0" 
mypy = "^1" 
mypy-extensions = "^0.4.3" 
pdoc3 = "^0.9.2" 
pytest = "^6.2.4" 
pytest-cov = "^2.12.1" 

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
