[project]
name = "dagviz"
version = "0.5.0"
description = "Visualization for DAGs"
authors = [{ name = "Wim Yedema", email = "wim.yedema@gmail.com" }]
requires-python = ">=3.10,<4"
readme = "README.md"
license = "Apache-2.0"
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "importlib-metadata>=4.0,<5 ; python_full_version < '3.10'",
    "networkx>=2.5.1",
    "svgwrite>=1.4.1,<2",
]

[project.urls]
Repository = "https://github.com/WimYedema/dagviz.git"

[dependency-groups]
dev = [
    "black>=20.8b1,<21",
    "click==8.0.1",
    "flake8>=3.8.4,<4",
    "flake8-comprehensions>=3.2.3,<4",
    "flake8-eradicate>=1.0.0,<2",
    "flake8-print>=3.1.4,<4",
    "jupyter>=1.0.0,<2",
    "mypy>=1,<2",
    "mypy-extensions>=0.4.3,<0.5",
    "pdoc3>=0.9.2,<0.10",
    "pytest>=6.2.4,<7",
    "pytest-cov>=2.12.1,<3",
]

[tool.uv]

[tool.uv.build-backend]
module-root = ""

[build-system]
requires = ["uv_build>=0.9.4,<0.10.0"]
build-backend = "uv_build"
